--- a/src/components/HeaderMovile.css
+++ b/src/components/HeaderMovile.css
@@ -23,7 +23,7 @@
 }
 
 .nav-section a:hover{
-    border-bottom: 2px solid var(--border-color);
+    border-bottom: 2px solid var(--bgIcons-services);
 }
 
 .container-header-movile ul li a{
