--- a/src/components/CarrouselOfTecnho.css
+++ b/src/components/CarrouselOfTecnho.css
@@ -11,12 +11,12 @@
     margin: 16px;
 }
 
-.h4{
-    width: 77%;
+.h4 {
+    width: 75%;
     color: var(--parraf-color);
 }
 
-.container-slider{
+.container-slider {
     height: 80px;
     width: fit-content;
     overflow: hidden;
@@ -34,8 +34,8 @@
     right: 0;
     width: 40px;
     height: 100%;
-    background: linear-gradient(to left, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
+    background: linear-gradient(to left, rgb(36, 36, 36), rgba(36, 36, 36, 0));
+}
 
 .container-slider::before {
     content: "";
@@ -44,17 +44,17 @@
     left: 0;
     width: 40px;
     height: 100%;
-    background: linear-gradient(to right, rgb(36, 36, 36), rgba(36, 36, 36,0));
-  }
+    background: linear-gradient(to right, rgb(36, 36, 36), rgba(36, 36, 36, 0));
+}
 
 /* End Shadow Technologies */
 /* ------------------------------------ */
 
 /* ------------------------------------ */
 
-.slider-img{
-        display: none;
-    }
+.slider-img {
+    display: none;
+}
 
 #slider {
     width: 150vh;
@@ -65,11 +65,12 @@
     display: block;
 }
 
-@keyframes slider{
-    to{
+@keyframes slider {
+    to {
         background-position: -150vh;
     }
 }
+
 /* End container technologies */
 /* ------------------------------------ */
 
@@ -79,9 +80,9 @@
         background-size: 100% 100%;
         animation: slider 30s infinite linear;
     }
-    
-    @keyframes slider{
-        to{
+
+    @keyframes slider {
+        to {
             background-position: -125vh;
         }
     }
@@ -94,9 +95,9 @@
         background-size: 100% 100%;
         animation: slider 30s infinite linear;
     }
-    
-    @keyframes slider{
-        to{
+
+    @keyframes slider {
+        to {
             background-position: -110vh;
         }
     }
@@ -108,9 +109,9 @@
         background-size: 100% 100%;
         animation: slider 30s infinite linear;
     }
-    
-    @keyframes slider{
-        to{
+
+    @keyframes slider {
+        to {
             background-position: -95vh;
         }
     }
@@ -122,9 +123,9 @@
         background-size: 100% 100%;
         animation: slider 30s infinite linear;
     }
-    
-    @keyframes slider{
-        to{
+
+    @keyframes slider {
+        to {
             background-position: -88vh;
         }
     }
@@ -136,17 +137,22 @@
     }
 
     .container-slider {
-        height: 100%;
         overflow: visible;
-        
+        position: unset;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     .container-technologies {
         height: 100%;
     }
 
-    .slider-img{
+    .slider-img {
         display: block;
+        width: 500px;
+        height: auto;
     }
 
 }
@@ -157,30 +163,92 @@
     }
 
     .container-slider {
-        height: 100%;
         overflow: visible;
-        
+        position: unset;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     .container-technologies {
         height: 100%;
     }
 
-    .slider-img{
+    .slider-img {
         display: block;
+        width: 400px;
+        height: auto;
     }
 }
 
 @media only screen and (min-width: 900px) and (max-width:1150px) {
-    .h4{
+    .h4 {
         text-align: center;
     }
 }
 
-
-
-@media only screen and (max-width: 900px) {
-    .h4{
+@media only screen and (min-width: 600px) and (max-width:900px) {
+    .h4 {
         text-align: center;
+    }
+
+    #slider {
+        display: none;
+    }
+
+    .container-slider {
+        overflow: visible;
+        position: unset;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .slider-img {
+        display: block;
+        width: 60%;
+        height: auto;
+    }
+
+    .box-tecnhologies-img{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;     
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .h4 {
+        text-align: center;
+    }
+
+    #slider {
+        display: none;
+    }
+
+    .container-slider {
+        overflow: visible;
+        position: unset;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .slider-img {
+        display: block;
+        width: 80%;
+        height: auto;
+    }
+
+    .box-tecnhologies-img{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;     
     }
 }
