--- a/src/components/ContactMe.css
+++ b/src/components/ContactMe.css
@@ -9,7 +9,7 @@
 }
 
 .contactme{
-    width: 77%;
+    width: 74%;
     padding: 32px 0 0 0;
     display: flex;
     flex-direction: column;
@@ -74,11 +74,26 @@
     color: var(--white);
     font-weight: bold;
 }
+
+.form-contactme label:after {
+    content: ' *';
+    color: #FF281E;
+}
+
 /* end of contact me */
 
 @media only screen and (min-width: 900px) and (max-width:1150px) {
     .contactme{
         text-align: center;
+        width: 70%;
+    }
+
+    input{
+        width: 240px;
+    }
+
+    .form-container{
+        width: 87%;
     }
 }
 
@@ -94,4 +109,36 @@
     .button-send-message{
         width: 80%;
     }
+}
+
+
+.tooltip-label {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip-label::before {
+    width: max-content;
+    position: absolute;
+    bottom: 70%;
+    left: 5%;
+    padding: 6px;
+    color: white;
+    font-size: 16px;
+    background-color: #FF281E;
+    content: attr(data-tooltip);
+    transform: translateX(60%);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    border-radius: 6px;
+    /* border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px; */
+}
+
+.tooltip-label:hover::before {
+    opacity: 1;
+    visibility: visible;
 }
