--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 4px;
+    padding: 6px;
 }
 
 .container-middle-section {
@@ -38,10 +38,10 @@
 .container-social-network {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     justify-content: center;
     width: 15%;
-    padding: 4px;
+    padding: 6px;
 }
 
 .container-social-network a:hover img {
@@ -69,7 +69,7 @@
 }
 
 .container-nav li a:hover{
-    border-bottom: 1px solid var(--bgPage);
+    border-bottom: 1px solid var(--border-color);
 }
 
 @media only screen and (min-width: 1200px) and (max-width:1800px) {
@@ -80,6 +80,6 @@
 
 @media only screen and (min-width: 900px) and (max-width:1150px) {
     .container-nav {
-        width: 88%;
+        width: 92%;
     }  
 }
