--- a/src/components/Proyect.css
+++ b/src/components/Proyect.css
@@ -11,7 +11,7 @@
 }
 
 .proyects {
-    width: 77%;
+    width: 73%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@
 }
 
 .title-proyect {
-    width: 77%;
+    width: 74%;
     padding: 32px 0 0 0;
 }
 
@@ -55,35 +55,23 @@
     align-items: center;
 }
 
-/* .img-proyect img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
-} */
-
 .proyects .proyect {
     transition: transform 0.3s ease;
-    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
 
 .proyect {
     transition: transform 0.3s ease;
-    /* Ajusta la duración y el tipo de transición según tus necesidades */
 }
 
 .proyect:hover {
     transform: translateY(-5px);
-    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
     box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-radius: 12px;
-    /* z-index: 0; */
 }
 
 .proyect:hover .img-proyect img {
     transform: translateY(-5px);
-    /* Ajusta la cantidad de desplazamiento hacia arriba según tus necesidades */
     box-shadow: 0 5px 0 0 var(--hover-experience-proyect);
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -106,19 +94,57 @@
 
 }
 
-@media only screen and (max-width: 900px) {
-    .proyect {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        padding: 24px;
-        gap: 32px;
-        justify-content: center;
+@media only screen and (min-width: 600px) and (max-width:900px) {
+    .proyects {
+        width: 77%;
     }
 
     .text-proyect {
         width: 100%;
     }
 
+    .proyect {
+        display: flex;
+        flex-direction: column;
+        padding: 16px;
+        gap: 32px;
+        justify-content: center;
+    }
+
+    .img-proyect {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .proyects {
+        width: 100%;
+    }
+
+    .proyect {
+        display: flex;
+        flex-direction: column;
+        padding: 16px;
+        gap: 32px;
+        justify-content: center;
+    }
+
+    .JUNMAT {
+        width: 100%;
+    }
+
+    .text-proyect {
+        width: 100%;
+    }
+
+    .container-proyects {
+        margin: 24px;
+    }
+
+    .img-proyect {
+        display: flex;
+        justify-content: center;
+    }
 
 }
