--- a/src/components/TecnhologieProyect.css
+++ b/src/components/TecnhologieProyect.css
@@ -1,4 +1,4 @@
-.tecnho-proyect{
+.tecnho-proyect {
     border-radius: 24px;
     border: 1px solid var(--border-color);
     display: flex;
@@ -7,4 +7,12 @@
     width: 5rem;
     padding: 4px;
     color: var(--hover-experience-proyect);
+}
+
+@media only screen and (max-width: 900px) {
+    .tecnho-proyect {
+        width: 4rem;
+        padding: 2px;
+    }
+
 }
