repair error in styles , and updates a size of images

--- a/src/components/Proyect.css
+++ b/src/components/Proyect.css
@@ -51,8 +51,16 @@
 }
 
 .img-proyect {
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+}
+
+.img{
+    width: 100%;
+    border-radius: 4px;
 }
 
 .proyects .proyect {
