--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -66,9 +66,19 @@
 }
 
 .img-experience {
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
+
+.img{
+    width: 100%;
+    border-radius: 4px;
+}
+
+
 
 /* End container proyect */
 
